# grillmaster-command-center

./: .gitignore  .pre-commit-config.yaml  AGENT_GUIDE.md  CODEBASE_AUDIT.md  CODE_AUDIT_2026-07-02.md  DESIGN.md  PHASE1_PLAN.md  README.md  SKILL_UPDATE_PROMPT.md  _check_kifs.py  _check_mpm.py  _dbg.py  _param_grid.py  _probe_g3.py  _regenerate_grids.py  _run_all_grids.sh  _test_mpm.py  _verify_physarum.py  app.py  gen_blobs.py  gs_build.py  gs_clean.py  gs_portrait.py  gs_portrait_hires.py  image-pipeline-dev-report.md  image_pipeline.py  package-lock.json  package.json  pytest.ini  requirements.txt
.claude/: launch.json
chord_bot/: PLAN.md  __init__.py  chord_types.py  cli.py  config.py  executor.py  keyframes.py  port_types.py  pyproject.toml  registry.py  server.py  types.py
chord_bot/chord_bot.egg-info/: PKG-INFO
chord_bot/demo/: planing_demo_graph.json  render_neapolitan_demo.py  render_planing_demo.py
chord_bot/export/: __init__.py  midi.py  text.py
chord_bot/nodes/: __init__.py  arpeggiator.py  augmented_sixth.py  bass.py  cadence.py  color.py  function.py  modulation.py  neapolitan.py  passing_chord.py  pedal.py  phrase.py  planing.py  repeat.py  rest.py  rhythm.py  secondary_dominant.py  sequence.py  substitution.py  suspension.py  tension_shaper.py  tonic.py  voice_leader.py
chord_bot/tests/: test_augmented_sixth.py  test_executor.py  test_function.py  test_neapolitan.py  test_nodes.py  test_planing.py  test_secondary_dominant.py
chord_bot/ui/: api.js  app.js  audio.js  config.js  drawer.js  index.html  preview.js  rail.js  state.js  wiki.html
(+1076 files in other folders)
